refactor: 메뉴 입력 관련 기능 리팩토링